# ds_rin_bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  temp.py
data_example/: channel_routes.json
docs/: README.md  bridge_configuration.md  bridge_draft.md  bridge_message_store.md  database_setup.md  railway_deploy.md
docs/plan/bot/channel-nickname-role-sync/: plan.md
src/: main.py
src/app/: __init__.py  config.py  container.py  database.py
src/bot/: __init__.py  client.py  commands.py  temp_vc.py
src/bot/bridge/: __init__.py  manager.py  messages.py  profiles.py  routes.py
src/bot/nickname_sync/: __init__.py  models.py  repository.py  service.py
src/views/: __init__.py  nickname_sync_setup.py  view.py
